# moo3d_wasm

./: .gitignore  .replit  Cargo.toml  Makefile  replit.nix
client/: base16.js  images.txt  index.html  launcher.js  m3d_wasm.wasm  moo3d_wasm.wasm  style.css  wasm_hook.js
m3d_core/: Cargo.toml  build.rs
m3d_core/img/: dirt.txt  grass.txt  index.txt
m3d_core/src/: bin.rs  lib.rs  player.rs
m3d_core/src/entities/: material.rs  mod.rs
m3d_core/src/etc/: camera.rs  mod.rs  rendermath.rs
m3d_core/src/rendering/: gfx.rs  mod.rs  rendermath.rs
m3d_core/src/world/: material.rs  mod.rs
moo3d_core/: Cargo.toml  build.rs
moo3d_core/img/: index.txt
moo3d_core/src/: bin.rs  lib.rs
moo3d_core/src/entities/: mod.rs
moo3d_core/src/rendering/: camera.rs  fixedpoint.rs  gfx.rs  mod.rs  pixeliterator.rs  rendermath.rs
src/: lib.rs  wasm_interopt.rs
