[package]
name = "m3d_wasm"
version = "0.1.0"
authors = ["ykS"]

[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.m3d_core]
path = "./m3d_core"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
debug = true

[profile.test]
opt-level = 3
panic = "abort"
codegen-units = 16
debug = true