[package]
edition = "2018"
name = "m3d_core"
version = "0.1.0"
build = "build.rs"

[lib]
name = "m3d_core"
crate-type = ["rlib"]

[[bin]]
name = "m3d_test"
path = "src/bin.rs"

[dependencies]

[features]
callgrind = []

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
#debug = true

[profile.test]
opt-level = 3
panic = "abort"
codegen-units = 1
debug = true