[package]
name = "moo3d_core"
version = "0.1.0"
edition = "2018"

[lib]
name = "moo3d_core"
crate-type = ["rlib"]

[[bin]]
name = "moo3d_test"
path = "src/bin.rs"

[dependencies]

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
debug = true

[profile.test]
opt-level = 3
panic = "abort"
codegen-units = 16
debug = true